<resources>
    <string name="app_name">Concesionarios BaCa</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ver_mas_button">Ver más</string>
    <string name="button_text" />
    <string name="inicio">Inicio</string>
    <string name="cat_logo">Catálogo</string>
    <string name="perfil">Perfil</string>
    <string name="car_image">Imagen del coche</string>
    <string name="car_price">Precio: $%1$.2f</string>
    <string name="car_horse_power">Caballos: %1$d</string>
    <string name="car_doors">Puertas: %1$d</string>
    <string name="car_type">Tipo: %1$s</string>
    <string name="car_color">Color: %1$s</string>
    <string name="prompt_email">Correo electrónico</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Inicia sesión o regístrate</string>
    <string name="action_sign_in_short">Inicia sesión</string>
    <string name="welcome">"¡Bienvenido!"</string>
    <string name="invalid_username">Nombre de usuario no válido</string>
    <string name="invalid_password">La contraseña debe tener 6 caracteres o más</string>
    <string name="login_failed">"Inicio de sesión fallido"</string>
    <string name="change_language">Cambiar idioma (EN/ES)</string>
    <string name="car_image_desc">Imagen del coche</string>
    <string name="car_title_placeholder">Coche</string>
    <string name="capture_button">Capturar</string>
    <string name="car_name">Nombre del coche</string>
    <string name="car_description">Descripción del coche</string>
    <string name="car_horsepower">Potencia</string>
    <string name="buy">Comprar</string>
    <string name="no_data_available">No existen datos disponibles</string>
    <string name="email_hint">Correo electrónico</string>
    <string name="password_hint">Contraseña</string>
    <string name="login">Iniciar sesión</string>
    <string name="no_account_register">¿No tienes una cuenta? Regístrate</string>
    <string name="profile_image">Imagen de perfil</string>
    <string name="username_hint">Nombre de usuario</string>
    <string name="logout">Cerrar sesión</string>
    <string name="name_hint">Nombre</string>
    <string name="surname_hint">Apellido</string>
    <string name="dni_hint">DNI</string>
    <string name="phone_hint">Teléfono</string>
    <string name="birthdate_hint">Fecha de nacimiento</string>
    <string name="already_have_account">¿Ya tienes una cuenta? Inicia sesión</string>
    <string name="register_button">Registrar</string>
    <string name="take_photo">Tomar Foto</string>
    <string name="select_from_gallery">Seleccionar desde Galería</string>
    <string name="brand">Marca</string>
    <string name="model">Modelo</string>
    <string name="horse_power">Caballos de fuerza</string>
    <string name="description">Descripción</string>
    <string name="color">Color</string>
    <string name="type">Tipo</string>
    <string name="price">Precio</string>
    <string name="plate">Placa</string>
    <string name="doors">Número de puertas</string>
    <string name="sell_car">Vender Coche</string>
    <string name="back_button">Volver</string>
    <string name="app_logo">Logo de la aplicación</string>
    <string name="menu_button">Menú</string>
    <string name="user_icon">Icono de usuario</string>
    <string name="menu_catalog">Catálogo</string>
    <string name="menu_resell">Reventa</string>
    <string name="menu_profile">Perfil</string>
    <string name="menu_find_us">Encuéntranos</string>

</resources>