<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <include
            android:id="@+id/navbar"
            layout="@layout/navbar" />

        <ImageView
            android:id="@+id/carImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/car_image" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="10dp"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/carName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="28sp"
                android:textStyle="bold"
                android:paddingTop="8dp"
                android:gravity="center"
                android:contentDescription="@string/car_name" />

            <TextView
                android:id="@+id/carDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:paddingTop="8dp"
                android:gravity="center"
                android:contentDescription="@string/car_description" />

            <TextView
                android:id="@+id/carPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:paddingTop="8dp"
                android:gravity="center"
                android:contentDescription="@string/car_price" />

            <TextView
                android:id="@+id/carHorsePower"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:paddingTop="8dp"
                android:gravity="center"
                android:contentDescription="@string/car_horsepower" />

            <TextView
                android:id="@+id/carDoors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:paddingTop="8dp"
                android:gravity="center"
                android:contentDescription="@string/car_doors" />

            <TextView
                android:id="@+id/carType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:paddingTop="8dp"
                android:gravity="center"
                android:contentDescription="@string/car_type" />

            <TextView
                android:id="@+id/carColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:paddingTop="8dp"
                android:gravity="center"
                android:contentDescription="@string/car_color" />

            <Button
                android:id="@+id/buyButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buy"
                android:visibility="gone"
                android:padding="10dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/dark_red"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:elevation="4dp"
                android:gravity="center"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
