<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_marginTop="110dp"
            android:layout_marginBottom="90dp">

            <ImageView
                android:id="@+id/carImageView"
                android:layout_width="320dp"
                android:layout_height="180dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/car_image"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:scaleType="centerCrop"
                android:background="@drawable/ic_add_photo" />

            <Button
                android:id="@+id/openCameraButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/take_photo"
                app:layout_constraintTop_toBottomOf="@id/carImageView"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/dark_red"
                android:textColor="@android:color/white"/>

            <Button
                android:id="@+id/uploadFromGalleryButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_from_gallery"
                app:layout_constraintTop_toBottomOf="@id/carImageView"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/dark_red"
                android:textColor="@android:color/white"/>

            <EditText
                android:id="@+id/brandEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/brand"
                app:layout_constraintTop_toBottomOf="@id/uploadFromGalleryButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp" />

            <EditText
                android:id="@+id/modelEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/model"
                app:layout_constraintTop_toBottomOf="@id/brandEditText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp" />

            <EditText
                android:id="@+id/horsePowerEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/horse_power"
                android:inputType="number"
                app:layout_constraintTop_toBottomOf="@id/modelEditText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp" />

            <EditText
                android:id="@+id/descriptionEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                app:layout_constraintTop_toBottomOf="@id/horsePowerEditText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp" />

            <EditText
                android:id="@+id/colorEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/color"
                app:layout_constraintTop_toBottomOf="@id/descriptionEditText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp" />

            <EditText
                android:id="@+id/typeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/type"
                app:layout_constraintTop_toBottomOf="@id/colorEditText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp" />

            <EditText
                android:id="@+id/priceEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/price"
                android:inputType="numberDecimal"
                app:layout_constraintTop_toBottomOf="@id/typeEditText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp" />

            <EditText
                android:id="@+id/plateEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/plate"
                app:layout_constraintTop_toBottomOf="@id/priceEditText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp" />

            <EditText
                android:id="@+id/doorsEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/doors"
                android:inputType="number"
                app:layout_constraintTop_toBottomOf="@id/plateEditText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp" />

            <Button
                android:id="@+id/submitButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sell_car"
                android:backgroundTint="@color/dark_red"
                app:layout_constraintTop_toBottomOf="@id/doorsEditText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <include
        android:id="@+id/navbar"
        layout="@layout/navbar" />

</androidx.constraintlayout.widget.ConstraintLayout>
