<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navbar"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:background="@color/dark_red"
    android:elevation="4dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

    <!-- Botón de volver -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:backgroundTint="@color/dark_red"
        android:contentDescription="@string/back_button"
        app:icon="@drawable/baseline_arrow_back_24"
        app:iconTint="@color/white" />
    <!-- Logo de la aplicación -->
    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/ic_app_logo"
        android:contentDescription="@string/app_logo" />

    <!-- Botón de menú -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/menu_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:backgroundTint="@color/dark_red"
        android:contentDescription="@string/menu_button"
        app:icon="@drawable/menu_80dp_ffffff_fill0_wght400_grad0_opsz48"
        app:iconTint="@color/white" />
</androidx.appcompat.widget.Toolbar>
